syntax = "proto3";

package inventory;

option go_package = "go-ecommerce-backend-api/proto/inventory";

// Inventory service definition
service InventoryService {
  // GetInventoryByProductID retrieves inventory information for a specific product
  rpc GetInventoryByProductID(GetInventoryRequest) returns (InventoryResponse) {}
}

// Request message for getting inventory by product ID
message GetInventoryRequest {
  int64 product_id = 1;
}

// Response message containing inventory information
message InventoryResponse {
  int64 id = 1;
  int64 product_id = 2;
  int32 quantity = 3;
  int32 reserved_quantity = 4;
  int32 reorder_point = 5;
  int32 reorder_quantity = 6;
  string last_restock_date = 7;
  bool is_low_stock = 8;
  int32 available_quantity = 9;
}